[gd_scene load_steps=7 format=3 uid="uid://df2kverp315t8"]

[ext_resource type="Script" uid="uid://dsf52vsvsogxb" path="res://addons/StyleboxFancy/inspector/corner editor container/corner_editor_container.gd" id="1_r6tm4"]
[ext_resource type="Texture2D" uid="uid://b1qswoa82s873" path="res://addons/StyleboxFancy/inspector/corner_icon.svg" id="2_u8m6u"]
[ext_resource type="Script" uid="uid://dn8hu40tetyai" path="res://addons/StyleboxFancy/inspector/corner editor container/link_button.gd" id="3_u8m6u"]

[sub_resource type="ButtonGroup" id="ButtonGroup_stc0f"]

[sub_resource type="Image" id="Image_u8m6u"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 231, 255, 90, 90, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 90, 90, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 255, 93, 93, 233, 255, 92, 92, 232, 255, 93, 93, 41, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 255, 93, 93, 233, 255, 92, 92, 232, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 93, 93, 44, 0, 0, 0, 0, 255, 91, 91, 42, 255, 91, 91, 42, 0, 0, 0, 0, 255, 91, 91, 45, 255, 93, 93, 44, 0, 0, 0, 0, 255, 91, 91, 42, 255, 91, 91, 42, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 92, 92, 235, 255, 92, 92, 234, 255, 89, 89, 43, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 92, 92, 235, 255, 92, 92, 234, 255, 89, 89, 43, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 92, 92, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 91, 91, 59, 255, 92, 92, 61, 255, 92, 92, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 91, 91, 59, 255, 92, 92, 61, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_8hx6q"]
image = SubResource("Image_u8m6u")

[node name="CornerEditorContainer" type="VBoxContainer" node_paths=PackedStringArray("link_button", "properties_dict")]
offset_right = 252.0
offset_bottom = 101.0
script = ExtResource("1_r6tm4")
link_button = NodePath("HBoxContainer/LinkButton")
properties_dict = {
NodePath("GridContainer/Top left corner/Top left radius"): &"corner_radius_top_left",
NodePath("GridContainer/Top right corner/Top right radius"): &"corner_radius_top_right",
NodePath("GridContainer/Bottom left corner/Bottom left radius"): &"corner_radius_bottom_left",
NodePath("GridContainer/Bottom right corner/Bottom right radius"): &"corner_radius_bottom_right",
NodePath("GridContainer/Top left corner/Top left curvature"): &"corner_curvature_top_left",
NodePath("GridContainer/Top right corner/Top right curvature"): &"corner_curvature_top_right",
NodePath("GridContainer/Bottom left corner/Bottom left curvature"): &"corner_curvature_bottom_left",
NodePath("GridContainer/Bottom right corner/Bottom right curvature"): &"corner_curvature_bottom_right"
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="RadiusTabButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_stc0f")
text = "Radius"

[node name="CurvatureTabButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_stc0f")
text = "Curvature"

[node name="LinkButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Lock/Unlock Corner Ratio"
toggle_mode = true
icon = SubResource("ImageTexture_8hx6q")
icon_alignment = 1
script = ExtResource("3_u8m6u")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Top left corner" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="GridContainer/Top left corner"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Top right"
texture = ExtResource("2_u8m6u")
expand_mode = 2
stretch_mode = 3

[node name="Top left radius" type="EditorSpinSlider" parent="GridContainer/Top left corner" groups=["Radius spinboxes"]]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
suffix = "px"
editing_integer = true

[node name="Top left curvature" type="EditorSpinSlider" parent="GridContainer/Top left corner" groups=["Curvature spinboxes"]]
visible = false
layout_mode = 2
size_flags_horizontal = 3
min_value = -5.0
max_value = 10.0
step = 0.005
value = 1.0
allow_greater = true

[node name="Top right corner" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="GridContainer/Top right corner"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Top right"
texture = ExtResource("2_u8m6u")
expand_mode = 2
stretch_mode = 3
flip_h = true

[node name="Top right radius" type="EditorSpinSlider" parent="GridContainer/Top right corner" groups=["Radius spinboxes"]]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
suffix = "px"
editing_integer = true

[node name="Top right curvature" type="EditorSpinSlider" parent="GridContainer/Top right corner" groups=["Curvature spinboxes"]]
visible = false
layout_mode = 2
size_flags_horizontal = 3
min_value = -5.0
max_value = 10.0
step = 0.005
value = 1.0
allow_greater = true

[node name="Bottom left corner" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="GridContainer/Bottom left corner"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Bottom left"
texture = ExtResource("2_u8m6u")
expand_mode = 2
stretch_mode = 3
flip_v = true

[node name="Bottom left radius" type="EditorSpinSlider" parent="GridContainer/Bottom left corner" groups=["Radius spinboxes"]]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
suffix = "px"
editing_integer = true

[node name="Bottom left curvature" type="EditorSpinSlider" parent="GridContainer/Bottom left corner" groups=["Curvature spinboxes"]]
visible = false
layout_mode = 2
size_flags_horizontal = 3
min_value = -5.0
max_value = 10.0
step = 0.005
value = 1.0
allow_greater = true

[node name="Bottom right corner" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="GridContainer/Bottom right corner"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Bottom right"
texture = ExtResource("2_u8m6u")
expand_mode = 2
stretch_mode = 3
flip_h = true
flip_v = true

[node name="Bottom right radius" type="EditorSpinSlider" parent="GridContainer/Bottom right corner" groups=["Radius spinboxes"]]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
suffix = "px"
editing_integer = true

[node name="Bottom right curvature" type="EditorSpinSlider" parent="GridContainer/Bottom right corner" groups=["Curvature spinboxes"]]
visible = false
layout_mode = 2
size_flags_horizontal = 3
min_value = -5.0
max_value = 10.0
step = 0.005
value = 1.0
allow_greater = true

[connection signal="pressed" from="HBoxContainer/RadiusTabButton" to="." method="_on_radius_tab_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CurvatureTabButton" to="." method="_on_curvature_tab_button_pressed"]
[connection signal="pressed" from="HBoxContainer/LinkButton" to="." method="_on_link_button_pressed"]
[connection signal="toggled" from="HBoxContainer/LinkButton" to="HBoxContainer/LinkButton" method="_on_toggled"]
